# pythtb

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CHANGES  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  PASSING.md  README.md  pyproject.md  pyproject.toml  pythtb.py  setup.py  setup.txt  tox.ini
dev/: DEVLOG.md  DEVNOTES.md  FILESTRUCTURE.md  HOWTOUSEGIT.md  INSTALL.md  NEWVERSION.md  QUICKGIT.md  README.md  TESTING.md  TODO
doc/: DEVLOG.md
docs/: go  publish  quick_go  see
examples/: 0dim.py  3site_cycle.py  3site_cycle_fin.py  bn_ribbon_berry.py  buckled_layer.py  checkerboard.py  cone.py  cubic-slab.py  cubic_slab.py  cubic_slab_hwf.py  edge.py  graphene.py  haldane.py  haldane_bp.py  haldane_fin.py  haldane_hwf.py  kane_mele.py  non_periodic_direction.py  plot_bands.py  simple.py  supercell.py  trestle.py  visualize.py  visualize_3d.py  w90.py  w90_quick.py
notes/: DEVELOPMENT.md  DEVLOG.md  HOWTOUSEGIT  HOWTOUSEGIT.md  NEWVERSION  QUICKGIT  README  README.md  TODO
pythtb/: __init__.py  bloch.py  k_mesh.py  mesh.py  mesh2.py  plotting.py  pythtb.py  tb_model.py  utils.py  w90.py  wannier.py  wf_array.py
scripts/: update_models.py
test_examples/: test_0dim.py  test_3site_cycle.py  test_3site_cycle_fin.py  test_bn_ribbon_berry.py  test_buckled_layer.py  test_checkerboard.py  test_cone.py  test_cubic_slab_hwf.py  test_edge.py  test_graphene.py  test_haldane.py  test_haldane_bp.py  test_haldane_fin.py  test_haldane_hwf.py  test_kane_mele.py  test_simple.py  test_supercell.py  test_trestle.py  test_visualize.py
tests/: PASSING.md  (+10 more)
(+359 files in other folders)
